<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.quizapp.MainActivity">

        <TextView
            android:id="@+id/question_1_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/question_1_text"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/question_1_answer_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="textCapWords"
            android:labelFor="@id/question_1_answer_field" />

        <TextView
            android:id="@+id/question_2_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/question_2_text"
            android:textSize="23sp" />

        <RadioGroup
            android:id="@+id/answer_2_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_2_option_1"
                style="@style/radioButton"
                android:text="@string/question_2_option_1" />

            <RadioButton
                android:id="@+id/question_2_option_2"
                style="@style/radioButton"
                android:text="@string/question_2_option_2" />

            <RadioButton
                android:id="@+id/question_2_option_3"
                style="@style/radioButton"
                android:text="@string/question_2_option_3" />

            <RadioButton
                android:id="@+id/question_2_option_4"
                style="@style/radioButton"
                android:text="@string/question_2_option_4" />
        </RadioGroup>

        <TextView
            android:id="@+id/question_3_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/question_3_text"
            android:textSize="23sp" />

        <RadioGroup
            android:id="@+id/answer_3_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_3_option_1"
                style="@style/radioButton"
                android:text="@string/question_3_option_1" />

            <RadioButton
                android:id="@+id/question_3_option_2"
                style="@style/radioButton"
                android:text="@string/question_3_option_2" />

            <RadioButton
                android:id="@+id/question_3_option_3"
                style="@style/radioButton"
                android:text="@string/question_3_option_3" />

            <RadioButton
                android:id="@+id/question_3_option_4"
                style="@style/radioButton"
                android:text="@string/question_3_option_4" />
        </RadioGroup>

        <TextView
            android:id="@+id/question_4_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/question_4_text"
            android:textSize="23sp" />

        <CheckBox
            android:id="@+id/question_4_option_1"
            style="@style/radioButton"
            android:text="@string/question_4_option_1" />

        <CheckBox
            android:id="@+id/question_4_option_2"
            style="@style/radioButton"
            android:text="@string/question_4_option_2" />

        <CheckBox
            android:id="@+id/question_4_option_3"
            style="@style/radioButton"
            android:text="@string/question_4_option_3" />

        <CheckBox
            android:id="@+id/question_4_option_4"
            style="@style/radioButton"
            android:text="@string/question_4_option_4" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-light"
            android:onClick="submitAnswer"
            android:text="@string/submit_button_text"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>
